--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 h1 {
   font-family: sans-serif;
-  font-size: 45px;
+  font-size: 60px;
   color: white;
   margin: 5px;
 
 }
 
+hr {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.text {
+  text-align: center;
+}
+
 .header {
-  background-color: #111;
-  position: absolute;
-  background-size: 100%;
-  left: 0;
-  right: 0;
+  margin-top: 50px;
 }
 
 body {
-  text-align: center;
   background-color: #646565;
   font-family: sans-serif;
 }
@@ -36,6 +41,11 @@ p {
 .pic-margin {
   margin-left: 40px;
   margin-right: 40px;
+}
+
+.pic-margin2 {
+  margin-left: 20px;
+  margin-right: 30px;
 }
 
 .caption {
