--- a/style.css
+++ b/style.css
@@ -371,7 +371,8 @@ a svg{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
+    margin-left: 30px;
 }
 
 /* Change the color of links on hover */
